--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "~4.9.x",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+	"title-notify": "^1.0.5"
   },
   "engines": {
     "node": "0.12.2"
