--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
+    "body-parser": "^1.14.1",
     "express": "~4.9.x",
-    "socket.io": "^1.3.5"
+    "jsonwebtoken": "^5.4.1",
+    "mongodb": "^2.0.49",
+    "socket.io": "^1.3.5",
+    "socketio-jwt": "^4.3.3"
   },
   "engines": {
     "node": "0.12.2"
